--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@400;500&display=swap');
