--- a/src/Components/Training/Training.css
+++ b/src/Components/Training/Training.css
@@ -10,5 +10,11 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: rgb(206, 22, 22);
+    /* background-color: rgb(206, 22, 22); */
 }
+@media screen and (max-width: 576px) {
+    .training-card{
+       transform: scale(.80);
+    }
+  }
+  
